# cmake-package-check

./: README.md  ci_env.yml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
src/cmake_package_check/: cmake_package_check.py
src/cmake_package_check/templates/: CMakeLists.txt.in
tests/: test_cmake_package_check.py
