[metadata]
name = cmake-package-check
description = A physics engine in reduced coordinates implemented with JAX.
long_description = file: README.md
long_description_content_type = text/markdown
author = Silvio Traversaro
author_email = silvio.traversaro@iit.it
license = BSD
license_files = LICENSE
platforms = any
url = https://github.com/ami-iit/cmake-package-check

project_urls =
    Changelog = https://github.com/ami-iit/cmake-package-check/releases
    Source = https://github.com/ami-iit/cmake-package-check
    Tracker = https://github.com/ami-iit/cmake-package-check/issues

keywords =

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development

[options]
zip_safe = False
packages = find:
package_dir =
    =src
python_requires = >=3.8
install_requires = jinja2


[options.packages.find]
where = src

[options.package_data]
# If any package or subpackage contains *.txt.in include them:
cmake_package_check = templates/*.txt.in

[options.entry_points]
console_scripts =
   cmake-package-check = cmake_package_check.cmake_package_check:main

[options.extras_require]
style =
    black
    isort
testing =
all =
    %(style)s
    %(testing)s

[tool:pytest]
addopts = -rsxX -v --strict-markers
testpaths = tests
